update electron to work

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,11 +1,11 @@
 <div class="page">
-  <h1 class="header">Welcome to the <strong>Behavior Tree Visual Editr</strong></h1>
+  <h1 class="header">Welcome to the <strong>Behavior Tree Visual Editor</strong></h1>
 
   <div class="content">
 
-    <p class="text-justify">A tool to make it easier to build <a href="https://hexdocs.pm/behavior_tree/BehaviorTree.html">behavior trees</a> for the <a href="https://git.corp.adobe.com/pages/BotTestingFramework/bot_army/readme.html">Bot Testing Framework</a>.</p>
+    <p class="text-justify">A tool to make it easier to build <a href="https://hexdocs.pm/behavior_tree/BehaviorTree.html" target="_blank">behavior trees</a> for the <a href="https://git.corp.adobe.com/pages/BotTestingFramework/bot_army/readme.html" target="_blank">Bot Testing Framework</a>.</p>
 
-    <p>This tool was adapted from the existing <a href="https://github.com/behavior3/behavior3editor/">Behavior3 Editor</a></p>
+    <p>This tool was adapted from the existing <a href="https://github.com/behavior3/behavior3editor/" target="_blank">Behavior3 Editor</a></p>
 
     <h3 class="header">Basic usage</h3>
       <ul>
