minor display fixes for default nodes

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -14,12 +14,13 @@
         <li>Make new trees under "Project/New tree" or hover over "Trees" side bar divider</li>
         <li>You can drag the tree names just like other nodes to nest trees</li>
         <li>You must name one tree "Root" (the name of the tree is set via the title of the tree's root node)</li>
-        <li>Shift+click to drag (or middle mouse button)</li>
-        <li>Del key deletes a node</li>
+        <li>Shift+click to pan the view (or middle mouse button)</li>
+        <li>Del key (fn+delete on a macbook) deletes a node</li>
         <li>Each node has details/instructions in its description</li>
         <li>Be sure to save via the menu icon or cntr+s or "Project/Save project"</li>
-        <li>You can create custom nodes via "Project/New node" or the Nodes sidebar divider.  Only action nodes with a "Name" of "action" can be parsed, and work just like the generic function nod</li>es.
+        <li>You can create custom nodes via "Project/New node" or the Nodes sidebar divider.  Only custom nodes with a "Name" and "Category" of "action" can be parsed, and work just like the generic function nod</li>es.
         <li>Using "&lt;key_name&gt;" in a node's title will render the value for that property's key</li>
+        <li>You can use "templates" in titles and properties to reference properties on the tree's root node.  Templates look like <span>{{key_name}</span>}.</li>
       </ul>
 
 <!--
