wrap long node names

--- a/src/assets/less/c_nodes.less
+++ b/src/assets/less/c_nodes.less
@@ -29,6 +29,8 @@
       padding: 0px;
 
       li {
+        word-break: break-all;
+        margin-bottom: 5px;
         .edit {
           float: right;
           color: @color-light1;
