change docs for custom action nodes

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -18,7 +18,7 @@
         <li>Del key (fn+delete on a macbook) deletes a node</li>
         <li>Each node has details/instructions in its description</li>
         <li>Be sure to save via the menu icon or cntr+s or "Project/Save project"</li>
-        <li>You can create custom nodes via "Project/New node" or the Nodes sidebar divider.  Only custom nodes with a "Name" and "Category" of "action" can be parsed, and work just like the generic function nod</li>es.
+        <li>You can create custom action nodes via "Project/New node" or the Nodes sidebar divider. They should have a unique name, the "actions" category, and a title in the same format as the generic function action.</li>
         <li>Using "&lt;key_name&gt;" in a node's title will render the value for that property's key</li>
         <li>You can use "templates" in titles and properties to reference properties on the tree's root node.  Templates look like <span>{{key_name}</span>}.</li>
       </ul>
