add docs about extracting actions from code base

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -19,6 +19,7 @@
         <li>Each node has details/instructions in its description</li>
         <li>Be sure to save via the menu icon or cntr+s or "Project/Save project"</li>
         <li>You can create custom action nodes via "Project/New node" or the Nodes sidebar divider. They should have a unique name, the "actions" category, and a title in the same format as the generic function action.</li>
+        <li>See <a href="https://git.corp.adobe.com/pages/BotTestingFramework/bot_army/Mix.Tasks.Bots.ExtractActions.html">mix bots.extract_actions</a> on how to import custom actions from your code base.</li>
         <li>Using "&lt;key_name&gt;" in a node's title will render the value for that property's key</li>
         <li>You can use "templates" in titles and properties to reference properties on the tree's root node.  Templates look like <span>{{key_name}</span>}.</li>
       </ul>
