--- a/src/app/pages/editor/modals/editnode.html
+++ b/src/app/pages/editor/modals/editnode.html
@@ -5,7 +5,7 @@
       <div class="b3modal-wrap">
         <h1 class="b3modal-title">{{editnode.action}} node</h1>
         <div class="b3modal-content">
-          
+
             <div class="row">
               <div class="form-group col-md-4" ng-class="{'has-error':nodeForm.name.$invalid && nodeForm.name.$dirty}">
                 <label for="name" class="control-label">Name</label>
@@ -13,10 +13,10 @@
                        class="form-control"
                        name="name"
                        ng-model="editnode.node.name"
-                       tooltip="{{nodeForm.name.$error.blacklist?'Node already exists':''}}"
+                       tooltip="{{nodeForm.name.$error.denylist?'Node already exists':''}}"
                        tooltip-placement="bottom"
                        tooltip-trigger="keyup"
-                       blacklist="{{editnode.blacklist}}"
+                       denylist="{{editnode.denylist}}"
                        required
                        autofocus>
                        <!-- tooltip-enable="!inputModel"  -->
@@ -32,7 +32,7 @@
 
               <div class="form-group col-md-4">
                 <label for="category" class="control-label">Category</label>
-                <select class="form-control" 
+                <select class="form-control"
                         ng-model="editnode.node.category"
                         ng-disabled="editnode.original">
                   <option value="composite">Composite</option>
@@ -51,7 +51,7 @@
 
               <div class="form-group col-md-6">
                 <b3-key-table heading="Properties" ng-model="editnode.node.properties"></b3-key-table>
-              </div> 
+              </div>
             </div>
 
         </div>
@@ -59,7 +59,7 @@
 
       <div class="b3modal-buttons">
         <input type="button" class="btn btn-danger btn-lg pull-left" ng-click="editnode.remove()" value="Remove" ng-show="editnode.original">
-        
+
         <input type="button" class="btn btn-default btn-lg" ui-sref="editor" value="Cancel">
         <button type="submit" class="btn btn-success btn-lg" ng-disabled="nodeForm.name.$invalid">Save</button>
       </div>
